--- a/FrontEnd/src/views/login.ejs
+++ b/FrontEnd/src/views/login.ejs
@@ -10,10 +10,11 @@
   <!-- Conteúdo principal -->
   <div class="container d-flex align-items-center justify-content-center" style="min-height: 100vh;">
     <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
+      <h1><%= mensagem %></h1>
       <div class="card-body">
-        <h1><%= mensagem %></h1>
         <h2 class="mb-4 text-center">Login</h2>
         <form action="/login" method="POST">
+          <p style="color: rgb(255, 99, 99);"><%= error %></p>
           <div class="mb-3">
             <label for="email" class="form-label">E-mail:</label>
             <input type="email" class="form-control" id="email" name="email" placeholder="Digite seu e-mail" required>
@@ -34,5 +35,6 @@
 
   <!-- Scripts do Bootstrap 5 -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  
 </body>
 </html>
