--- a/FrontEnd/src/views/register.ejs
+++ b/FrontEnd/src/views/register.ejs
@@ -15,15 +15,21 @@
             <h3>Register</h3>
           </div>
           <div class="card-body">
-            <form action="/register" method="POST">
+            <form id="register-form" action="/users/register" method="POST">
               <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" class="form-control" id="email" name="email" required>
               </div>
               <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="senha" class="form-control" id="senha" name="senha" required>
+                <label for="password">Senha:</label>
+                <input type="password" class="form-control" id="senha" name="senha" required>
               </div>
+              <div class="form-group">
+                <label for="confirm-password">Confime sua senha:</label>
+                <input type="password" class="form-control" id="confirm-password" name="confirm-password" required>
+              </div>
+              <div id="password-message" class="text-danger mb-3"></div>
+              <div id="email-message" class="text-danger mb-3"></div>
               <button type="submit" class="btn btn-primary btn-block">Register</button>
             </form>
           </div>
@@ -31,6 +37,44 @@
       </div>
     </div>
   </div>
+  <script>
+    document.getElementById('register-form').addEventListener('submit', function(event) {
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('senha').value;
+      const confirmPassword = document.getElementById('confirm-password').value;
+      const passwordMessageDiv = document.getElementById('password-message');
+      const emailMessageDiv = document.getElementById('email-message');
+
+      const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+      const passwordRegex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$/;
+
+      let valid = true;
+
+      if (!emailRegex.test(email)) {
+        event.preventDefault();
+        emailMessageDiv.textContent = 'Use um email valido!';
+        valid = false;
+      } else {
+        emailMessageDiv.textContent = '';
+      }
+
+      if (!passwordRegex.test(password)) {
+        event.preventDefault();
+        passwordMessageDiv.textContent = 'A senha deve ter no minimo 9 caracteres, deve conter no minimo uma letra maiúscula(A-Z), uma letra minúscula(a-z), um numero (0-9) e um caracter especial(!@#$%&*).';
+        valid = false
+      } else if (password !== confirmPassword) {
+        event.preventDefault();
+        passwordMessageDiv.textContent = 'As senhas não condizem.';
+        valid = false;
+      } else {
+        passwordMessageDiv.textContent = '';
+      }
+
+      if (!valid) {
+        event.preventDefault();
+      }
+    });
+  </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
