--- a/FrontEnd/src/views/register.ejs
+++ b/FrontEnd/src/views/register.ejs
@@ -15,7 +15,7 @@
             <h3>Register</h3>
           </div>
           <div class="card-body">
-            <form id="register-form" action="/users/register" method="POST">
+            <form id="register-form" action="/register" method="POST">
               <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" class="form-control" id="email" name="email" required>
